--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -169,4 +169,17 @@ body {
 	.tab.tab-active {
 		@apply text-on-base;
 	}
+
+	/* Modal component */
+
+	.modal {
+		@apply invisible hidden fixed top-0 right-0 bottom-0 left-0
+		opacity-0 bg-black/50 transition overflow-x-hidden;
+	}
+	.modal.show {
+		@apply block visible opacity-100;
+	}
+	.modal__content {
+		@apply my-12 flex justify-center;
+	}
 }
