--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -175,14 +175,11 @@ body {
 
 	/* Modal component */
 
+	.overlay {
+		@apply fixed top-0 right-0 bottom-0 left-0
+		bg-black/50 transition overflow-x-hidden;
+	}
 	.modal {
-		@apply invisible hidden fixed top-0 right-0 bottom-0 left-0
-		opacity-0 bg-black/50 transition overflow-x-hidden;
-	}
-	.modal.show {
-		@apply block visible opacity-100;
-	}
-	.modal__content {
 		@apply min-h-full py-12 flex justify-center;
 	}
 }
