--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -188,4 +188,29 @@ body {
 	.snackbar {
 		@apply bg-black/80 text-white p-4 m-4 rounded pointer-events-none;
 	}
+
+	/* Switch component */
+
+	.switch {
+		@apply w-16 h-8 bg-white/40 flex items-center justify-start rounded-full p-1 cursor-pointer;
+		box-shadow: inset 0px 6px 8px 3px rgba(0, 0, 0, 0.25);
+	}
+	.switch-xs { @apply w-12 h-6; }
+	.switch-sm { @apply w-14 h-7; }
+	.switch-md { @apply w-16 h-8; }
+	.switch-lg { @apply w-20 h-10 p-2; }
+	.switch-xl { @apply w-24 h-12 p-2; }
+
+	.switch-xs .handle { @apply w-4 h-4; }
+	.switch-sm .handle { @apply w-5 h-5; }
+	.switch-md .handle { @apply w-6 h-6; }
+	.switch-lg .handle { @apply w-7 h-7; }
+	.switch-xl .handle { @apply w-8 h-8; }
+
+	.switch[data-on="true"] {
+		@apply justify-end;
+	}
+	.handle {
+		@apply w-6 h-6 bg-base rounded-full;
+	}
 }
